# netglance

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: index.md  llms.txt
docs/css/: custom.css
docs/guide/: index.md
docs/js/: mermaid-init.js  theme-toggle.js
docs/reference/: disclaimer.md  getting-started.md  index.md  security.md  state-management.md
netglance/: __init__.py  mcp_server.py  notify.py  validation.py
netglance/api/: server.py
netglance/cli/: __init__.py  _shared.py  alerts.py  api.py  arp.py  baseline.py  daemon.py  db.py  dhcp.py  discover.py  dns.py  export.py  fingerprint.py  firewall.py  http.py  iot.py  ipv6.py  main.py  mcp.py  metrics.py  perf.py  ping.py  plugin.py  report.py  route.py  scan.py  speed.py  tls.py  topology.py  traffic.py  uptime.py  (+3 more)
overrides/: main.html
tests/: conftest.py  test_alerts.py  test_api.py  test_api_security.py  test_arp.py  test_baseline.py  test_daemon.py  test_db_cli.py  test_db_warning.py  test_dhcp.py  test_discover.py  test_dns.py  test_export.py  test_fingerprint.py  test_firewall.py  test_http.py  test_iot.py  test_ipv6.py  test_mcp.py  test_perf.py  test_phase1_config.py  test_phase1_metrics.py  test_phase1_models.py  test_phase1_notify.py  test_phase3_db.py  test_phase3_models.py  test_phase4_models.py  test_ping.py  test_plugin.py  test_report.py  test_report_v2.py  test_route.py  test_save_disclosure.py  test_scaffold.py  test_scan.py  test_speed.py  test_tls.py  test_topology.py  test_traffic.py  test_trending.py  (+6 more)
(+96 files in other folders)
